# RustRendering

./: .gitignore  Cargo.toml  README.md  build.rs  memo.txt  rustfmt.toml
src/: lib.rs  main.rs
src/cpp/: CMakeLists.txt
src/cpp/AEInclude/: AEBinding.hpp  AEBuffer.hpp  AEDrawObjects.hpp  AEMatrix.hpp  AEPipeline.hpp  AEUBO.hpp  AEWindow.hpp
src/cpp/common/vulkan_wrapper/: vulkan_wrapper.cpp  vulkan_wrapper.h
src/gltf/: gltf.rs
src/imgui_support/: mod.rs
src/math/: math.rs
src/shaders/: compile.bat
src/shaders/src/: fragment.frag  gridVertex.vert  vertex.vert
src/support/: mod.rs
src/vulkanr/: buffer.rs  command.rs  data.rs  descriptor.rs  device.rs  image.rs  pipeline.rs  render.rs  swapchain.rs  vulkan.rs  window.rs
